--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,35 @@
 .App-logo {
+  position: absolute;
+  z-index: 4;
   animation: spin infinite 200s linear;
   height: 160px;
+  top: 100px;
+  left: calc(screen.width / 2);
 }
 
 .App-header {
+  position: absolute;
+  z-index: 3;
   background-color: #b8a69a;
   padding: 20px;
-  color: white;
-  text-align: center;
+  top: 0px;
+  left: 0px;
 }
 
 .App-center {
-  position: relative;
+  position: absolute;
   z-index: 2;
+  top: calc((screen.height / 2)+100px);
+  left: calc(screen.width / 2);
 }
 
 .Backdrop {
   position: absolute;
   z-index: 1;
+  top: 0px;
+  left: 0px;
+  height: screen.height;
+  width: screen.width;
 }
 
 .App-intro {
