--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,10 @@
   z-index: 2;
   margin-left: auto;
   margin-right: auto;
-  width: 10em;
-  top: 60%;
+  max-width: 50em;
+  top: 50%;
+  left: 50%;
+  text-align: center;
 }
 
 .Backdrop {
