--- a/src/App.css
+++ b/src/App.css
@@ -25,9 +25,9 @@
   z-index: 2;
   margin-left: auto;
   margin-right: auto;
-  max-width: 50em;
+  max-width: 50%;
   top: 50%;
-  left: 50%;
+  left: 25%;
   text-align: center;
 }
 
