--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   margin-left: auto;
   margin-right: auto;
   top: 100px;
-  left: 47%;
+  left: 33%;
 }
 
 .App-header {
@@ -29,6 +29,7 @@
   top: 50%;
   left: 25%;
   text-align: center;
+  font-size: small;
 }
 
 .Backdrop {
